--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ninja-game",
   "version": "0.1.0",
   "devDependencies": {
+    "flightplan": "0.6.14",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.1",
